--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,8 @@
 server.port=8080
 
 
-spring.datasource.url= jdbc:oracle:thin:@//localhost:1522/xe
-spring.datasource.username=chris
+spring.datasource.url= jdbc:oracle:thin:@//171.244.57.155:1521/xe
+spring.datasource.username=duylq
 spring.datasource.password=123456
 
 spring.jpa.show-sql=true
